--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -72,18 +72,15 @@
             robotImg.src = "../../imagens/robo1_static.png";
 
             try {
-                // Update button to "Listening..." with pulsing effect
                 recordButton.textContent = "Listening...";
                 recordButton.classList.add("listening");
 
-                // Start recognition
                 recognition.start();
 
-                // Stop listening after 10 seconds
                 recognitionTimeout = setTimeout(() => {
                     recognition.stop();
                     errorMessage.textContent = "Please use shorter phrases for better responses.";
-                }, 10000); // 10 seconds
+                }, 10000);
             } catch (error) {
                 console.error("Error starting voice recognition:", error);
                 errorMessage.textContent = "Error accessing the microphone.";
@@ -92,20 +89,9 @@
         });
 
         recognition.onresult = async (event) => {
-            clearTimeout(recognitionTimeout); // Clear the timeout if speech ends earlier
-            const userMessage = event.results[0][0].transcript.trim(); // Captures the spoken text
+            clearTimeout(recognitionTimeout);
+            const userMessage = event.results[0][0].transcript.trim();
             console.log("User said:", userMessage);
-
-            // Limit to 100 words
-            const words = userMessage.split(" ");
-            if (words.length > 100) {
-                errorMessage.textContent = "Please limit your phrases to 100 words.";
-                resetButton();
-                return;
-            }
-
-            // Switch to the static robot image while processing
-            robotImg.src = "../../imagens/robo1_static.png";
 
             try {
                 const response = await fetch(API_URL, {
@@ -121,10 +107,7 @@
                 }
 
                 const data = await response.json();
-                const botResponse = data.response;
-
-                // Play the robot's response
-                playResponse(botResponse);
+                playResponse(data.response);
             } catch (error) {
                 console.error("Error:", error);
                 errorMessage.textContent = "Error sending the message.";
@@ -132,31 +115,23 @@
             }
         };
 
-        recognition.onerror = (event) => {
-            console.error("Voice recognition error:", event.error);
-            errorMessage.textContent = "Error capturing speech. Please try again.";
-            resetButton();
-        };
-
         recognition.onend = () => {
-            clearTimeout(recognitionTimeout); // Clear timeout if ended naturally
+            clearTimeout(recognitionTimeout);
             resetButton();
         };
 
         function playResponse(response) {
             const synth = window.speechSynthesis;
             const utterance = new SpeechSynthesisUtterance(response);
-            utterance.lang = "en-US"; // Language: English (US)
+            utterance.lang = "en-US";
             utterance.rate = 1;
 
-            // When the speech starts
             utterance.onstart = () => {
-                robotImg.src = "../../imagens/robo1.gif"; // Starts the GIF
+                robotImg.src = "../../imagens/robo1.gif";
             };
 
-            // When the speech ends
             utterance.onend = () => {
-                robotImg.src = "../../imagens/robo1_static.png"; // Switches back to static image
+                robotImg.src = "../../imagens/robo1_static.png";
             };
 
             synth.speak(utterance);
