--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <h1>Talk to the Robot</h1>
-    <img id="robotImg" src="./imagens/robo1_static.png" alt="Robot">
+    <img id="robotImg" src="../../imagens/robo1_static.png" alt="Robot">
     <br>
     <button id="recordButton">Press to Speak</button>
     <p id="errorMessage"></p>
@@ -62,18 +62,23 @@
         const errorMessage = document.getElementById("errorMessage");
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
 
-        recognition.lang = "en-US";
+        recognition.lang = "en-US"; // Language: English (US)
         recognition.interimResults = false;
 
         let recognitionTimeout;
 
         recordButton.addEventListener("click", () => {
+            // Reseta mensagens de erro
             errorMessage.textContent = "";
+
+            // Atualiza botão para "Listening..."
             recordButton.textContent = "Listening...";
             recordButton.classList.add("listening");
 
+            // Inicia reconhecimento de fala
             recognition.start();
 
+            // Para automaticamente após 10 segundos
             recognitionTimeout = setTimeout(() => {
                 recognition.stop();
                 errorMessage.textContent = "You exceeded the time limit. Please use shorter phrases.";
@@ -81,7 +86,7 @@
         });
 
         recognition.onresult = async (event) => {
-            clearTimeout(recognitionTimeout);
+            clearTimeout(recognitionTimeout); // Limpa timeout se o usuário parar de falar
             const userMessage = event.results[0][0].transcript.trim();
 
             try {
@@ -106,8 +111,14 @@
             }
         };
 
+        recognition.onerror = (event) => {
+            console.error("Voice recognition error:", event.error);
+            errorMessage.textContent = "Error capturing speech. Please try again.";
+            resetButton();
+        };
+
         recognition.onend = () => {
-            clearTimeout(recognitionTimeout);
+            clearTimeout(recognitionTimeout); // Limpa timeout se terminar naturalmente
             resetButton();
         };
 
@@ -117,11 +128,11 @@
             utterance.lang = "en-US";
 
             utterance.onstart = () => {
-                robotImg.src = "./imagens/robo1.gif";
+                robotImg.src = "../../imagens/robo1.gif"; // Ativa GIF
             };
 
             utterance.onend = () => {
-                robotImg.src = "./imagens/robo1_static.png";
+                robotImg.src = "../../imagens/robo1_static.png"; // Volta ao estático
             };
 
             synth.speak(utterance);
